--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-react-app",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://makhmudovs1.github.io/Frontend-Part",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -15,6 +16,8 @@
     "styled-components": "^6.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
