--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-app",
+  "name": "Frontend-Part",
   "version": "1.0.0",
   "private": true,
   "homepage": "https://makhmudovs1.github.io/Frontend-Part",
