--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://makhmudovs1.github.io/Frontend-Part",
-  "name": "my-react-app",
+  "name": "Frontend-Part",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
